--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.18",
+    "@langchain/google-vertexai": "^0.1.2",
     "@phala/dstack-sdk": "^0.1.4",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.2",
@@ -23,6 +25,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "form-data": "^4.0.1",
+    "lowdb": "^7.0.1",
     "lucide-react": "^0.460.0",
     "net": "^1.0.2",
     "next": "^15.0.3",
