--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@langchain/core": "^0.3.18",
-    "@langchain/google-vertexai": "^0.1.2",
+    "@dynamic-labs/ethereum": "^3.6.3",
+    "@dynamic-labs/sdk-react-core": "^3.6.3",
+    "@dynamic-labs/wagmi-connector": "^3.6.3",
     "@phala/dstack-sdk": "^0.1.4",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.2",
@@ -18,7 +19,6 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
-    "@rainbow-me/rainbowkit": "^2.2.0",
     "@tanstack/react-query": "^5.60.5",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
