--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@dynamic-labs/ethereum": "^3.6.3",
     "@dynamic-labs/sdk-react-core": "^3.6.3",
     "@dynamic-labs/wagmi-connector": "^3.6.3",
+    "@langchain/core": "^0.3.18",
+    "@langchain/google-vertexai": "^0.1.2",
     "@phala/dstack-sdk": "^0.1.4",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.2",
