--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 NEXT_PUBLIC_ALCHEMY_API_KEY=
 # This is the ID for your RainbowKit project (Get one from https://cloud.walletconnect.com)
 NEXT_PUBLIC_RAINBOWKIT_PROJECT_ID=
+
+ZILLIZ_URL=
+ZILLIZ_API_KEY=
