--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@xenova/transformers": "^2.17.2",
     "@zilliz/milvus2-sdk-node": "^2.4.9",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
