--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
     "form-data": "^4.0.1",
+    "langchain": "^0.3.5",
     "lowdb": "^7.0.1",
     "lucide-react": "^0.460.0",
     "net": "^1.0.2",
