--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@circles-sdk/profiles": "^0.14.0",
     "@circles-sdk/sdk": "^0.14.0",
     "@circles-sdk/utils": "^0.14.0",
+    "@dynamic-labs/client": "^3.6.3",
     "@dynamic-labs/ethereum": "^3.6.3",
     "@dynamic-labs/sdk-react-core": "^3.6.3",
     "@dynamic-labs/wagmi-connector": "^3.6.3",
