--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@langchain/core": "^0.3.18",
     "@langchain/google-vertexai": "^0.1.2",
     "@phala/dstack-sdk": "^0.1.4",
+    "@pushprotocol/restapi": "^1.7.29",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -37,12 +38,14 @@
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
     "form-data": "^4.0.1",
+    "install": "^0.13.0",
     "langchain": "^0.3.5",
     "lowdb": "^7.0.1",
     "lucide-react": "^0.460.0",
     "net": "^1.0.2",
     "next": "^15.0.3",
     "nextjs-viem-dstack-template": "file:",
+    "npm": "^10.9.0",
     "postcss": "^8.4.49",
     "react": "^18",
     "react-dom": "^18",
