--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@langchain/google-vertexai": "^0.1.2",
     "@phala/dstack-sdk": "^0.1.4",
     "@pushprotocol/restapi": "^1.7.29",
+    "@pushprotocol/socket": "^0.5.3",
+    "@pushprotocol/uiweb": "^1.7.2",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
